[package]
name = "danger_noodle"
version = "0.1.0"
authors = ["Jiabo Hou <jiabo.hou@vidyard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^1.0.9"
listenfd = "^0.3.3"
serde = "1.0.103"
serde_json = "^1.0.42"
